--- a/Nand2Tetris/projects/06/Assembler/.vscode/settings.json
+++ b/Nand2Tetris/projects/06/Assembler/.vscode/settings.json
@@ -2,7 +2,6 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "c:\\Users\\AceJG\\OneDrive\\Documents\\GitHub\\School-Projects\\Nand2Tetris\\Java Libs\\commons-io-2.11.0.jar"
+        "lib/**/*.jar"
     ]
 }
